First version of pipeline

--- a/Configs/Exome_QC_config.conf
+++ b/Configs/Exome_QC_config.conf
@@ -23,15 +23,18 @@ R=/nrnb/opt/anaconda3.7/bin/R
 
 ### Run Parameters A ###
 
-mafCutoff=0.001
-missStart=89
+mafCutoff=0.00001
+missStart=91
 missEnd=99
-missStep=2
+missStep=4
 hwe_pval=0.000001
 LD_window=1500
 LD_shift=150
 LD_r2=0.2
 exclude_highLD_nonAuto=0 #1=True, 0=False
+
+reduceVar=0
+snpExtract=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_chr${chr}.bim
 
 ### Run Parameters B ###
 build=b38
