Old cluster save April-21-2021

--- a/Configs/Epi_exome.conf
+++ b/Configs/Epi_exome.conf
@@ -11,13 +11,13 @@ chr=$1
 
 root=/nrnb/ukbiobank/data/OQFE_200k_exm/
 scriptDir=/cellar/users/snwright/Git/gwas_pipeline/
-baseName=exome_qc_
+baseName=epi_exome_
 outName=${baseName}chr${chr}
-outDir=/nrnb/ukbiobank/data/exome_debug/exome_compare/
+outDir=/nrnb/ukbiobank/epilepsy/outputs/
 bedfile=${root}ukb23155_c${chr}_b0_v1.bed
 bimfile=${root}UKBexomeOQFE_chr${chr}.bim
 famfile=${root}ukb23155_c12_b0_v1_s200632.fam
-case_list=""
+case_list=/nrnb/ukbiobank/epilepsy/inputs/epilepsy_6441.cases.phe
 
 highLD=/cellar/users/snwright/Data/Reference/highLDregions4bim_b38.awk
 R=/nrnb/opt/anaconda3.7/bin/R
