--- a/Configs/Ex_test.conf
+++ b/Configs/Ex_test.conf
@@ -6,38 +6,41 @@
 
 
 ### Take chromosome input ###
-chr=chr$1
+chr=$1
 
 
-root=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_
+root=/nrnb/ukb-majithia/data/OQFE_200k_exm/
 scriptDir=/nrnb/ukb-majithia/sarah/Git/gwas_pipeline/
-baseName=snp_qc_
-outName=${baseName}${chr}
-outDir=/nrnb/ukb-majithia/data/exome_debug/snp_chip_compare/
-bedfile=${root}${chr}.bed
-bimfile=${root}${chr}.bim
-famfile=${root}${chr}.fam
+baseName=extest_
+outName=${baseName}chr${chr}
+outDir=/nrnb/ukb-majithia/data/exome_debug/extest/
+bedfile=${root}ukb23155_c${chr}_b0_v1.bed
+bimfile=${root}UKBexomeOQFE_chr${chr}.bim
+famfile=${root}ukb23155_c12_b0_v1_s200632.fam
 case_list=""
 
 highLD=/cellar/users/snwright/Data/Reference/highLDregions4bim_b38.awk
-R=/cellar/users/snwright/.conda/envs/MyR/bin/R
+R=/nrnb/opt/anaconda3.7/bin/R
 
 ### Run Parameters A ###
 
 mafCutoff=0.00001
-missStart=89
+missStart=91
 missEnd=99
-missStep=2
+missStep=4
 hwe_pval=0.000001
-LD_window=1500
-LD_shift=150
+LD_window=3000
+LD_shift=300
 LD_r2=0.2
 exclude_highLD_nonAuto=0 #1=True, 0=False
+
+reduceVar=0
+snpExtract=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_chr${chr}.bim
 
 ### Run Parameters B ###
 build=b38
 separate_sex=1 #0=false, 1=true (are there separate files for sexes)
-sex_chr=('X' 'Y' 'XY')
+sex_chr=('X' 'Y')
 sexInfo=1 #0=false, 1=true (are sex chromosomes present in data?)
 sexFmin=0.2
 sexFmax=0.8
