--- a/Configs/Epi_snp.conf
+++ b/Configs/Epi_snp.conf
@@ -6,18 +6,18 @@
 
 
 ### Take chromosome input ###
-chr=chr$1
+chr=$1
 
 
 root=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_
 scriptDir=/nrnb/ukb-majithia/sarah/Git/gwas_pipeline/
-baseName=snp_qc_
-outName=${baseName}${chr}
-outDir=/nrnb/ukb-majithia/data/exome_debug/snp_chip_compare/
-bedfile=${root}${chr}.bed
-bimfile=${root}${chr}.bim
-famfile=${root}${chr}.fam
-case_list=""
+baseName=epi_snp_
+outName=${baseName}chr${chr}
+outDir=/nrnb/ukb-majithia/epilepsy/outputs/snp/
+bedfile=${root}chr${chr}.bed
+bimfile=${root}chr${chr}.bim
+famfile=${root}chr${chr}.fam
+case_list=/nrnb/ukb-majithia/epilepsy/inputs/epilepsy_6441.cases.phe
 
 highLD=/cellar/users/snwright/Data/Reference/highLDregions4bim_b38.awk
 R=/cellar/users/snwright/.conda/envs/MyR/bin/R
@@ -25,14 +25,17 @@ R=/cellar/users/snwright/.conda/envs/MyR/bin/R
 ### Run Parameters A ###
 
 mafCutoff=0.00001
-missStart=89
+missStart=91
 missEnd=99
 missStep=2
 hwe_pval=0.000001
 LD_window=1500
 LD_shift=150
 LD_r2=0.2
-exclude_highLD_nonAuto=0 #1=True, 0=False
+exclude_highLD_nonAuto=1 #1=True, 0=False
+
+reduceVar=0
+#snpExtract=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_chr${chr}.bim
 
 ### Run Parameters B ###
 build=b38
