Updated and tested sex check, added clean up and plink2 --split-par call

--- a/V2/Configs/Epi_snp.conf
+++ b/V2/Configs/Epi_snp.conf
@@ -38,9 +38,9 @@ reduceVar=0
 #snpExtract=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_chr${chr}.bim
 
 ### Run Parameters B ###
-build=b38
+build=b37
 separate_sex=1 #0=false, 1=true (are there separate files for sexes)
-sex_chr=('X' 'Y' 'XY')
+sex_chr=('X' 'Y')
 sexInfo=1 #0=false, 1=true (are sex chromosomes present in data?)
 sexFmin=0.2
 sexFmax=0.8
