Updated and tested MAF filter, added upper limit to MAF

--- a/V2/Configs/Epi_snp.conf
+++ b/V2/Configs/Epi_snp.conf
@@ -24,7 +24,8 @@ R=/cellar/users/snwright/.conda/envs/MyR/bin/R
 
 ### Run Parameters A ###
 
-mafCutoff=0.00001
+minMAF=0.00001
+maxMAF=0.6
 missStart=91
 missEnd=99
 missStep=2
