--- a/V2/Configs/epi_snp.conf
+++ b/V2/Configs/epi_snp.conf
@@ -8,16 +8,15 @@
 ### Take chromosome input ###
 chr=$1
 
-
 root=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_
 scriptDir=/nrnb/ukb-majithia/sarah/Git/gwas_pipeline/
-baseName=cad_full_
+baseName=epi_9to1_
 outName=${baseName}chr${chr}
-outDir=/nrnb/ukb-majithia/sarah/pan_disease/cad/outputs/
+outDir=/nrnb/ukb-majithia/epilepsy/outputs/common_snp/
 bedfile=${root}chr${chr}.bed
 bimfile=${root}chr${chr}.bim
 famfile=${root}chr${chr}.fam
-case_list=/nrnb/ukb-majithia/sarah/validation/eids_I251.txt
+case_list=/nrnb/ukb-majithia/epilepsy/inputs/epilepsy_6441.cases.phe
 ancestry_subset=/nrnb/ukb-majithia/data/phenotypes/ukb_f22006_white_caucasian_eids.txt
 ancestry_name=ukb_white
 
@@ -26,7 +25,7 @@ R=/cellar/users/snwright/.conda/envs/MyR/bin/R
 
 ### Run Parameters A ###
 
-minMAF=0.0001
+minMAF=0.001
 maxMAF=0.6
 missStart=91
 missEnd=99
