--- a/V2/Configs/epi_test.conf
+++ b/V2/Configs/epi_test.conf
@@ -18,6 +18,8 @@ bedfile=${root}chr${chr}.bed
 bimfile=${root}chr${chr}.bim
 famfile=${root}chr${chr}.fam
 case_list=/nrnb/ukb-majithia/epilepsy/inputs/epilepsy_6441.cases.phe
+ancestry_subset=/nrnb/ukb-majithia/data/phenotypes/ukb_f22006_white_caucasian_eids.txt
+ancestry_name=ukb_white
 
 highLD=/cellar/users/snwright/Data/Reference/highLDregions4bim_b37.awk
 R=/cellar/users/snwright/.conda/envs/MyR/bin/R
