Added updated config files

--- a/V2/Configs/epi_1to1_snp.conf
+++ b/V2/Configs/epi_1to1_snp.conf
@@ -10,7 +10,7 @@ chr=$1
 
 root=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_
 scriptDir=/nrnb/ukb-majithia/sarah/Git/gwas_pipeline/
-baseName=epi_9to1_
+baseName=epi_1to1_
 outName=${baseName}chr${chr}
 outDir=/nrnb/ukb-majithia/epilepsy/outputs/common_snp/
 bedfile=${root}chr${chr}.bed
@@ -22,6 +22,12 @@ ancestry_name=ukb_white
 
 highLD=/cellar/users/snwright/Data/Reference/highLDregions4bim_b37.awk
 R=/cellar/users/snwright/.conda/envs/MyR/bin/R
+
+control_per=100
+icd10_file=/nrnb/ukb-majithia/epilepsy/inputs/any_icd10_sorted.txt
+exclude_patt="G40"
+skip_MAF=0
+
 
 ### Run Parameters A ###
 
@@ -36,13 +42,13 @@ LD_shift=150
 LD_r2=0.2
 exclude_highLD_nonAuto=1 #1=True, 0=False
 
-reduceVar=0
 #snpExtract=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_chr${chr}.bim
 
 ### Run Parameters B ###
 build=b37
 separate_sex=1 #0=false, 1=true (are there separate files for sexes)
 sex_chr=('X' 'Y')
+no_split=1
 sexInfo=1 #0=false, 1=true (are sex chromosomes present in data?)
 sexFmin=0.2
 sexFmax=0.8
@@ -54,13 +60,3 @@ ibd=0.1875
 ibd_sigma=3 #number of standard deviations about mean
 
 
-#pheno=/path/to/external_pheno.phe
-#covar=/path/to/covariates.cov
-#genders=/path/to/external_genders.txt
-#names=/path/to/external_individual_names.txt
-#keeps=/path/to/samples_to_keep.txt 
-#excludes=/path/to/samples_to_exclude.txt
-#insnps=/path/to/SNPs_to_keep.txt
-#outsnps=/path/to/SNPs_to_exclude.txt
-#plink=/path/to/plink2
-#R=/path/to/R
