--- a/V2/Configs/cad_1to5_snp.conf
+++ b/V2/Configs/cad_1to5_snp.conf
@@ -8,10 +8,9 @@
 ### Take chromosome input ###
 chr=$1
 
-
 root=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_
 scriptDir=/nrnb/ukb-majithia/sarah/Git/gwas_pipeline/
-baseName=cad_full_
+baseName=cad_1to5_
 outName=${baseName}chr${chr}
 outDir=/nrnb/ukb-majithia/sarah/pan_disease/cad/outputs/
 bedfile=${root}chr${chr}.bed
@@ -24,9 +23,15 @@ ancestry_name=ukb_white
 highLD=/cellar/users/snwright/Data/Reference/highLDregions4bim_b37.awk
 R=/cellar/users/snwright/.conda/envs/MyR/bin/R
 
+control_per=500
+icd10_file=/nrnb/ukb-majithia/epilepsy/inputs/any_icd10_sorted.txt
+exclude_patt="I25"
+skip_MAF=0
+
+
 ### Run Parameters A ###
 
-minMAF=0.0001
+minMAF=0.001
 maxMAF=0.6
 missStart=91
 missEnd=99
@@ -37,13 +42,13 @@ LD_shift=150
 LD_r2=0.2
 exclude_highLD_nonAuto=1 #1=True, 0=False
 
-reduceVar=0
 #snpExtract=/nrnb/ukb-genetic/snp_chip/each_chr/ukb_snp_chr${chr}.bim
 
 ### Run Parameters B ###
 build=b37
 separate_sex=1 #0=false, 1=true (are there separate files for sexes)
 sex_chr=('X' 'Y')
+no_split=1
 sexInfo=1 #0=false, 1=true (are sex chromosomes present in data?)
 sexFmin=0.2
 sexFmax=0.8
@@ -55,13 +60,3 @@ ibd=0.1875
 ibd_sigma=3 #number of standard deviations about mean
 
 
-#pheno=/path/to/external_pheno.phe
-#covar=/path/to/covariates.cov
-#genders=/path/to/external_genders.txt
-#names=/path/to/external_individual_names.txt
-#keeps=/path/to/samples_to_keep.txt 
-#excludes=/path/to/samples_to_exclude.txt
-#insnps=/path/to/SNPs_to_keep.txt
-#outsnps=/path/to/SNPs_to_exclude.txt
-#plink=/path/to/plink2
-#R=/path/to/R
