Updates: first version file clean up, add list of necessary files, fixed skip_MAF, added ability to skip SIAGE step1

--- a/V2/Configs/cad_exome.conf
+++ b/V2/Configs/cad_exome.conf
@@ -23,6 +23,11 @@ ancestry_name=ukb_white
 highLD=/cellar/users/snwright/Data/Reference/highLDregions4bim_b38.awk
 R=/cellar/users/snwright/.conda/envs/MyR/bin/R
 
+control_per=200
+icd10_file=/nrnb/ukb-majithia/epilepsy/inputs/any_icd10_sorted.txt
+exclude_patt="I25"
+skip_MAF=1
+
 ### Run Parameters A ###
 
 minMAF=0.000005
@@ -43,6 +48,7 @@ reduceVar=0
 build=b38
 separate_sex=1 #0=false, 1=true (are there separate files for sexes)
 sex_chr=('X' 'Y')
+no_split=1
 sexInfo=1 #0=false, 1=true (are sex chromosomes present in data?)
 sexFmin=0.2
 sexFmax=0.8
